# meawm

./: AUTHORS  CMakeLists.txt  COMPLIANCE  ChangeLog  INSTALL  LICENSE  README.md  config.h
cmake/: FindCAIRO.cmake
data/: menu  menu.hardened  menu.plain  rcfile  xinitrc.meawm
data/actions/: action  action.click-to-focus  action.non-opaque  action.sloppy-focus  action.sloppy-focus.merge
data/scripts/: compositing.sh  stylesdir.pl
data/styles/: Default.style  Mustard.style
data/xsessions/: meawm.desktop
docs/: CMakeLists.txt  bsetbg.1  bsetroot.1  meawm.1
docs/fr_FR/: bsetroot.1
docs/ja_JP/: bsetroot.1
docs/nl_NL/: bsetroot.1
src/: CMakeLists.txt  Dockapp.cc  Dockapp.hh  Event.cc  Event.hh  Font.cc  Font.hh  Image.cc  Image.hh  Meawm.cc  Meawm.hh  Menu.cc  Menu.hh  Net.cc  Net.hh  Regex.cc  Regex.hh  Resources.cc  Resources.hh  Screen.cc  Screen.hh  Timer.cc  Timer.hh  Window.cc  Window.hh  main.cc
