SET (project_BIN ${PROJECT_NAME})
FILE (GLOB project_SRCS *.cc *.hh EXCLUDE "Dockapp.cc")

MESSAGE(STATUS "Project: ${PROJECT_NAME}" )

IF (NOT USE_DOCKAPP)
	LIST(REMOVE_ITEM project_SRCS "Dockapp.cc")
ENDIF()

SET_SOURCE_FILES_PROPERTIES("Dockapp.cc" PROPERTIES EXCLUDE_FROM_BUILD 1)

ADD_EXECUTABLE(${project_BIN} ${project_SRCS} )

#TARGET_LINK_LIBRARIES(${project_BIN} compton)
#TARGET_LINK_LIBRARIES(${project_BIN} lib)
#ADD_EXECUTABLE(${project_BIN} ${LIB_Sources} ${project_SRCS} )
#TARGET_LINK_LIBRARIES(${project_BIN} compton)

SET_TARGET_PROPERTIES(${project_BIN} PROPERTIES VERSION "${APPLICATION_VERSION_MAJOR}.${APPLICATION_VERSION_MINOR}" OUTPUT_NAME ${project_BIN} CLEAN_DIRECT_OUTPUT 1)

INSTALL(TARGETS ${project_BIN} DESTINATION bin)
